completed per requirements, mobile css changes added, spacing issues resolved

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,31 +1,197 @@
+html, body {
+  font-size: 16px;
+  background: #f8f8f8;
+}
+h2 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Arbutus Slab', serif;
+}
+
+p, a {
+  font-family: 'Roboto', sans-serif;
+}
+
+header {
+  height: 50px;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0, 0.5);
+}
+
+.navbar-fixed-top {
+  background: white;
+}
+
+.navbar-brand {
+  height: 36px;
+}
+
+nav ul a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #37c2aa;
+}
+
+nav ul a:hover, nav ul a:active {
+  color: #4a4a4a;
+}
+nav li > a.active {
+  color: #4a4a4a;
+}
+.nav>li>a:focus, .nav>li>a:hover {
+  background: none;
+}
+
 .jumbotron {
   background: url('../images/jumbotron.png');
   background-size: cover;
   text-align: center;
+  background-position: center;
+  height: 43.5rem;
 }
 
 .jumbotron h1 {
   background: #D404AF;
   color: white;
+  margin-bottom: 0;
+  font-size: 3.75rem;
+  margin: 17rem auto 0 auto;
+  max-width: 50rem;
+  padding-bottom: 0.5rem;
 }
 
 .jumbotron p {
   background: #F5CB07;
+  font-size: 1.25rem;
+  max-width: 50rem;
+  margin: 0 auto;
 }
-h2 {
+
+.blockquote {
+  width: 83%;
+  margin-bottom: 9.25rem;
+}
+footer.blockquote-footer:before {
+  content: none;
+}
+
+blockquote {
+  border-left: none;
+  margin: 0 auto;
+}
+blockquote p {
+  font-family: 'Droid Serif', serif;
+  font-style: italic;
+  font-size: 1.5rem;
+  color: #4a4a4a;
+  line-height: 1.3;
+  margin: 7rem auto 1.5rem;
+}
+
+.blockquote-footer {
+  background: none;
+  font-family: 'Roboto', serif;
+  font-style: italic;
+  line-height: 1.4;
+  font-size: 0.875rem;
+  color: #4a4a4a;
+}
+
+.why {
+  border-top: 1px solid #d4d5d6;
   text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section-title {
+  text-align: center;
+  margin-bottom: 2.25rem;
+}
+
+.why h2 {
+  position: relative;
+  top: -1.5rem;
+  padding: 0 1.25rem;
+  background: #f8f8f8;
+  display: inline;
 }
 
 .center {
   text-align: center;
 }
 
+.image-container {
+  margin-bottom: 2.25rem;
+}
+
 #team {
   background: #4A4A4A;
   color: white;
+  padding-top: 5.5rem;
 }
+#team h2 {
+  margin-bottom: 3.375rem;
+}
+
+.team-members {
+  margin-bottom: 7.25rem;
+}
+
+.team-members img {
+  margin-bottom: 2rem;
+}
+
+.clients {
+  border-top: 1px solid #d4d5d6;
+  text-align: center;
+  margin-top: 5.25rem;
+}
+
+.clients h2 {
+  margin-bottom: 88px;
+  position: relative;
+  top: -1.5rem;
+  padding: 0 1.25rem;
+  background: #f8f8f8;
+  display: inline;
+}
+
+.featured-clients img {
+  margin-bottom: 5rem;
+}
+
 
 footer {
   background: #E9EBEB;
+  padding-top: 2.625rem;
+  padding-bottom: 2rem;
+}
+footer i {
+  margin-bottom: 1.5rem;
+}
 
+footer p {
+
+}
+
+@media only screen and (max-width: 800px) {
+  .jumbotron {
+    height: 33.5rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .jumbotron h1 {
+    font-size: 2.75rem;
+    margin-top: 10rem;
+  }
+  .jumbotron p {
+    font-size: 1rem;
+  }
+  .blockquote {
+    margin-top: 4rem;
+    margin-bottom: 5.25rem;
+  }
 }
